--- a/src/infranet_team1/templates/base.html
+++ b/src/infranet_team1/templates/base.html
@@ -98,7 +98,8 @@
       <details open>
         <summary>💬 커뮤니티</summary>
         <ul>
-          <li><a href="{{ url_for('write.home') }}">자유게시판</a></li>
+          <li><a href="{{ url_for('write.home') }}">게시판</a></li>
+          <li><a href="#">게시물 요약</a></li>
         </ul>
       </details>
 
