--- a/src/infranet_team1/templates/client/detail.html
+++ b/src/infranet_team1/templates/client/detail.html
@@ -105,7 +105,7 @@
 
 <p>
     <a href="{{ url_for('client.show_list') }}">[목록으로]</a> |
-    <a href="{{ url_for('client.edit', id=client_doc._id) }}">[수정]</a> |
+    <a href="{{ url_for('client.edit_form', id=client_doc._id) }}">[수정]</a> |
     <form method="post" action="{{ url_for('client.delete', id=client_doc._id) }}" style="display:inline;" onsubmit="return confirm('정말 삭제하시겠습니까?')">
         <button type="submit">[삭제]</button>
     </form>
