--- a/src/infranet_team1/templates/client/list.html
+++ b/src/infranet_team1/templates/client/list.html
@@ -13,7 +13,7 @@
   {% endif %}
 </form>
 
-<p><a href="{{ url_for('client.create') }}">+ 고객사 등록</a></p>
+<p><a href="{{ url_for('client.create_form') }}">+ 고객사 등록</a></p>
 {% if clients %}
 <table border="1">
   <thead>
