--- a/src/infranet_team1/templates/base.html
+++ b/src/infranet_team1/templates/base.html
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             {% else %}
-                <a href="{{ url_for('auth.login') }}" class="button-primary">Login</a>
+                <a href="{{ url_for('auth.login_get') }}" class="button-primary">Login</a>
             {% endif %}
         </div>
     </header>
